# cottage

./: README.md  pyproject.toml
etc/: systemd.conf
scripts/: intruder.sh  start.sh  welcome.sh
scripts/alert/: intruder.sh
src/buzz_cottage/: button.py  buzz_gpio.py  event.py  exerunner.py  lights.py  motion.py  server.py
src/buzz_cottage/cmd/: alert_lights.py  button.py  button_tester.py  cottage.py  gryph.py  motion.py  welcome_lights.py
